<resources>
    <string name="app_name">Fritson Apps</string>
    <string name="heading">HEADING</string>
    <string name="desc">Description</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="sub_title_profile">Profile</string>
    <string name="sub_title_interest">Interest</string>
    <string name="sub_title_daily_activity">Daily Activity</string>
    <string name="sub_title_friend_list">Friend List</string>
    <string name="sub_title_music">Music Favorite</string>
    <string name="sub_title_video">Video Favorite</string>
    <string name="sub_title_contact">Contact</string>
    <string name="sub_title_about">About</string>
    <string name="sub_title_find_me">Find Me</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="full_name">Fritson Agung Julians Ayomi</string>
    <string name="title_home">Home</string>
    <string name="title_daily_activity">Daily Activity</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music_and_video">Music and Video</string>
    <string name="title_profile">Profile</string>
    <string name="subtitle_friend_list">Friend List</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="desc_profile">"Saya adalah anak pertama dari 3 bersaudara. Saya lahir pada tanggal 28 Juli 1998. Saya berasal dari Kota Luwuk, Sulawesi Tengah. Sekarang saya tinggal di Bandung bersama adik perempuan saya.Sekarang saya sedang menempuh pendidikan di perguruan tinggi Universitas Komputer Indonesia, Jurusan Teknik Informatika.Saya tipe orang yang cukup disiplin, humoris, dan lumayan malas."</string>
    <string name="desc_interest">Saya memiliki minat dalam bidang Jaringan Komputer. Hobby saya adalah bermain game, mendengarkan musik, dan membaca komik. Cita-cita saya adalah saya ingin membuat sebuah perusahaan pengembangan video game</string>
</resources>

