<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_DailyActivity"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_daily_activity" />

    <item
        android:id="@+id/navigation_Gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_MusicAndVideo"
        android:icon="@drawable/ic_music_and_video"
        android:title="@string/title_music_and_video" />

    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
