<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackishPurple"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorLittleDarkPurple"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_home"
                android:tint="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/book_os"
                android:text="@string/title_home"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                tools:ignore="spUsage" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerTitle"
        android:layout_marginBottom="@dimen/_43sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headerTitle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sub_title_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/sub_title_profile"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/profileView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                tools:ignore="NotSibling">

                <RelativeLayout
                    android:id="@+id/profileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/sub_title_Profile"
                    android:layout_alignStart="@+id/profileView"
                    android:layout_alignLeft="@+id/profileView"
                    android:background="@color/colorTransparentDarkPurple"
                    android:orientation="vertical">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/photo_profile"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:src="@drawable/profile"
                        app:civ_border_color="@color/colorTransparentDarkPurple" />

                    <TextView
                        android:id="@+id/fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/photo_profile"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:fontFamily="@font/book_os"
                        android:gravity="fill_horizontal"
                        android:text="@string/full_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/profileView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                tools:ignore="NotSibling">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/profileLayout"
                    android:layout_alignStart="@+id/profileView"
                    android:layout_alignLeft="@+id/profileView"
                    android:background="@color/colorTransparentDarkPurple"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/desc_self"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fullname"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="fill_horizontal"
                        android:text="@string/desc_profile"
                        android:textAlignment="center"
                        android:textColor="@color/colorTransparentWhite"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="italic" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/sub_title_Interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/roboto_light"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/sub_title_interest"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/interestView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileView"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_2sdp"
                tools:ignore="UnknownId">

                <RelativeLayout
                    android:id="@+id/interestLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparentDarkPurple"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/desc_interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="fill_horizontal"
                        android:text="@string/desc_interest"
                        android:textAlignment="center"
                        android:textColor="@color/colorTransparentWhite"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="italic" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>


